--- a/scss/partials/_lester-simple_sections.scss
+++ b/scss/partials/_lester-simple_sections.scss
@@ -101,7 +101,7 @@
           border-top-right-radius: 25px;
           border-bottom-right-radius: 25px;
           border: none;
-          background-color: var(--primary-color);
+          background-color: $theme-color;
           padding: 0 25px;
           color: $white;
           cursor: pointer;
