--- a/scss/partials/_list-group.scss
+++ b/scss/partials/_list-group.scss
@@ -55,7 +55,7 @@
   }
 
   &.active {
-    color: $body-color-base;
+    color: $sub-color-base;
     background-color: transparent;
     border-color: transparent;
 
