--- a/scss/partials/_type.scss
+++ b/scss/partials/_type.scss
@@ -1,4 +1,14 @@
 //
+// Text Block
+//
+
+p {
+  font-family: $font-secondary;
+  font-weight: $font-weight-400;
+  letter-spacing: 0.01px;
+}
+
+//
 // Headings
 //
 
