--- a/scss/zkin-ui-kit.scss
+++ b/scss/zkin-ui-kit.scss
@@ -52,6 +52,8 @@
 @import "partials/lester-clients";
 @import "partials/lester_counters";
 @import "partials/lester_content_sections";
+@import "partials/homenet-titles";
+@import "partials/homenet-info-pages";
 @import "utilities/background";
 @import "utilities/colors";
 @import "utilities/shadows";
