--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -1,3 +1,98 @@
+// Color system
+//
+// Theme colors
+$theme-color:           #fd5721;
+$main-color:            #85c3ae;
+
+// Body, heading color base
+$body-color-base:       #1f2323;
+$sub-color-base:        #717171;
+$heading-color-base:    #202020;
+
+// Fonts
+//
+// Font, line-height, and color for body text, headings, and more.
+$font-family-base: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', 'Segoe UI', sans-serif;
+$font-secondary: "Muli", 'Verdana', 'Avenir', 'Tahoma', 'Segoe UI', sans-serif;
+$font-zh: "Muli", 'verdana', 'Avenir', "Noto Serif TC", 宋体, SimSun, 华文细黑, STXihei, sans-serif;
+
+$font-size-base:    1rem;
+$font-size-lg:      ($font-size-base * 1.125);
+$font-size-sm:      ($font-size-base * .75);
+
+$font-weight-100:   100;
+$font-weight-200:   200;
+$font-weight-300:   300;
+$font-weight-400:   400;
+$font-weight-500:   500;
+$font-weight-600:   600;
+$font-weight-700:   700;
+$font-weight-800:   800;
+$font-weight-900:   900;
+
+$font-weight: ();
+$font-weight: map-merge(
+  (
+    "100": $font-weight-100,
+    "200": $font-weight-200,
+    "300": $font-weight-300,
+    "400": $font-weight-400,
+    "500": $font-weight-500,
+    "600": $font-weight-600,
+    "700": $font-weight-700,
+    "800": $font-weight-800,
+    "900": $font-weight-900
+  ),
+  $font-weight
+);
+
+$h1-font-size:                          $font-size-base * 2.5;
+$h2-font-size:                          $font-size-base * 2;
+$h3-font-size:                          $font-size-base * 1.75;
+$h4-font-size:                          $font-size-base * 1.5;
+$h5-font-size:                          $font-size-base * 1.25;
+$h6-font-size:                          $font-size-base;
+
+$h1-font-size-sm:                       $font-size-base * 2;
+$h2-font-size-sm:                       $font-size-base * 1.75;
+$h3-font-size-sm:                       $font-size-base * 1.5;
+$h4-font-size-sm:                       $font-size-base * 1.25;
+$h5-font-size-sm:                       $font-size-base;
+$h6-font-size-sm:                       $font-size-base * .875;
+
+$headings-font-weight:                  600;
+$headings-color:                        $heading-color-base;
+
+$display1-size:                         $font-size-base * 6;
+$display1-size-xs:                      $display1-size * .5;
+$display1-size-md:                      $display1-size * .75;
+$display1-size-xl:                      $display1-size;
+
+$display2-size:                         $font-size-base * 5.5;
+$display2-size-xs:                      $display2-size * .5;
+$display2-size-md:                      $display2-size * .75;
+$display2-size-xl:                      $display2-size;
+
+$display3-size:                         $font-size-base * 4.5;
+$display3-size-xs:                      $display3-size * .5;
+$display3-size-md:                      $display3-size * .75;
+$display3-size-xl:                      $display3-size;
+
+$display4-size:                         $font-size-base * 3.5;
+$display4-size-xs:                      $display4-size * .5;
+$display4-size-md:                      $display4-size * .75;
+$display4-size-xl:                      $display4-size;
+
+$blockquote-font-size:                  $font-size-base * 1.5;
+$blockquote-footer-font-size:           $font-size-base * .875;
+$blockquote-color:                      $heading-color-base;
+$blockquote-line-height:                1.333334;
+$blockquote-small-color:                #a1a1a1;
+$blockquote-footer-margin:              .625rem;
+
+$mark-bg:                               #f4f6f7;
+
+
 /* Lester scss variables */
 /* Points */
 $xs: 0px;
@@ -7,14 +102,7 @@ $lg: 991px;
 $xl: 1199px;
 
 
-// Color system
-//
-// Body, heading color base
-$body-color-base:       #717171;
-$heading-color-base:    #202020;
-
 // Color settings
-$main-color:            #85c3ae;
 
 $white:                 #fff;
 $black:                 #000;
@@ -159,90 +247,10 @@ $caret-size:                            1.2em;
 
 $disabled-opacity:                      .65;
 
-// Fonts
-//
-// Font, line-height, and color for body text, headings, and more.
-$font-family-base: "Montserrat", sans-serif;
-
-$font-size-base:    1rem;
-$font-size-lg:      ($font-size-base * 1.125);
-$font-size-sm:      ($font-size-base * .75);
-
-$font-weight-100:   100;
-$font-weight-200:   200;
-$font-weight-300:   300;
-$font-weight-400:   400;
-$font-weight-500:   500;
-$font-weight-600:   600;
-$font-weight-700:   700;
-$font-weight-800:   800;
-$font-weight-900:   900;
-
-$font-weight: ();
-$font-weight: map-merge(
-  (
-    "100": $font-weight-100,
-    "200": $font-weight-200,
-    "300": $font-weight-300,
-    "400": $font-weight-400,
-    "500": $font-weight-500,
-    "600": $font-weight-600,
-    "700": $font-weight-700,
-    "800": $font-weight-800,
-    "900": $font-weight-900
-  ),
-  $font-weight
-);
-
-$h1-font-size:                          $font-size-base * 2.5;
-$h2-font-size:                          $font-size-base * 2;
-$h3-font-size:                          $font-size-base * 1.75;
-$h4-font-size:                          $font-size-base * 1.5;
-$h5-font-size:                          $font-size-base * 1.25;
-$h6-font-size:                          $font-size-base;
-
-$h1-font-size-sm:                       $font-size-base * 2;
-$h2-font-size-sm:                       $font-size-base * 1.75;
-$h3-font-size-sm:                       $font-size-base * 1.5;
-$h4-font-size-sm:                       $font-size-base * 1.25;
-$h5-font-size-sm:                       $font-size-base;
-$h6-font-size-sm:                       $font-size-base * .875;
-
-$headings-font-weight:                  600;
-$headings-color:                        $heading-color-base;
-
-$display1-size:                         $font-size-base * 6;
-$display1-size-xs:                      $display1-size * .5;
-$display1-size-md:                      $display1-size * .75;
-$display1-size-xl:                      $display1-size;
-
-$display2-size:                         $font-size-base * 5.5;
-$display2-size-xs:                      $display2-size * .5;
-$display2-size-md:                      $display2-size * .75;
-$display2-size-xl:                      $display2-size;
-
-$display3-size:                         $font-size-base * 4.5;
-$display3-size-xs:                      $display3-size * .5;
-$display3-size-md:                      $display3-size * .75;
-$display3-size-xl:                      $display3-size;
-
-$display4-size:                         $font-size-base * 3.5;
-$display4-size-xs:                      $display4-size * .5;
-$display4-size-md:                      $display4-size * .75;
-$display4-size-xl:                      $display4-size;
-
-$blockquote-font-size:                  $font-size-base * 1.5;
-$blockquote-footer-font-size:           $font-size-base * .875;
-$blockquote-color:                      $heading-color-base;
-$blockquote-line-height:                1.333334;
-$blockquote-small-color:                #a1a1a1;
-$blockquote-footer-margin:              .625rem;
-
-$mark-bg:                               #f4f6f7;
-
 // Tables
 //
 // Customizes the `.table` component with basic values, each used across all table variations.
+$table-color:                           $sub-color-base;
 $table-cell-padding:                    .875rem;
 $table-cell-padding-sm:                 .3125rem .625rem;
 $table-active-bg:                       rgba($black, .05);
@@ -328,7 +336,7 @@ $input-font-size-lg:                    $font-size-base * .875;
 $input-bg:                              transparent;
 $input-disabled-bg-light-1:             rgba($white, .1);
 $input-disabled-bg-light-2:             rgba($white, .25);
-$input-color:                           $body-color-base;
+$input-color:                           $sub-color-base;
 $input-border-color:                    #e0e0e0;
 
 $input-color-light-1:                   $white-50;
@@ -342,7 +350,7 @@ $input-focus-border-color:              $component-active-bg;
 $input-focus-box-shadow:                0 0 8px 0 rgba($black, .2);
 $input-focus-box-shadow-light:          0 0 8px 0 rgba($white, .2);
 
-$input-placeholder-color:               $body-color-base;
+$input-placeholder-color:               $sub-color-base;
 $input-plaintext-color:                 $input-placeholder-color;
 
 $input-placeholder-color-light-1:       $white-50;
@@ -389,7 +397,7 @@ $custom-control-indicator-ac-light-1:   rgba($white, .5);
 $custom-control-indicator-ac-light-2:   rgba($white, .75);
 
 $custom-control-indicator-disabled-bg:          $custom-control-indicator-bg;
-$custom-control-label-disabled-color:           $body-color-base;
+$custom-control-label-disabled-color:           $sub-color-base;
 
 $custom-control-indicator-checked-disabled-bg:  rgba($main-color, .5);
 
@@ -482,7 +490,7 @@ $dropdown-caret-size-sm:                .75rem;
 $dropdown-caret-size-lg:                1rem;
 $dropdown-caret-only-px:                1.25rem;
 
-$dropdown-link-color:                   $body-color-base;
+$dropdown-link-color:                   $sub-color-base;
 $dropdown-link-active-bg:               $component-active-bg;
 $dropdown-link-disabled-color:          #bdc3c7;
 
@@ -498,13 +506,13 @@ $dropdown-menu-font-size:               $font-size-base * .875;
 // Navs
 $nav-link-padding-y:                    .9375rem;
 $nav-link-padding-x:                    1.25rem;
-$nav-link-disabled-color:               $body-color-base;
+$nav-link-disabled-color:               $sub-color-base;
 
 $nav-link-vertical-padding-y:           .75rem;
 $nav-link-vertical-padding-x:           1.75rem;
 
 $nav-link-font-size:                    .75rem;
-$nav-link-color:                        $body-color-base;
+$nav-link-color:                        $sub-color-base;
 $nav-active-color:                      $component-active-bg;
 $nav-active-border-width:               3px;
 
@@ -548,7 +556,7 @@ $pagination-font-size:                  .8125rem;
 $pagination-font-size-lg:               1.125rem;
 $pagination-font-size-sm:               .6875rem;
 
-$pagination-color:                      $body-color-base;
+$pagination-color:                      $sub-color-base;
 $pagination-color-light-1:              $white-50;
 $pagination-color-light-2:              $white;
 
@@ -642,7 +650,7 @@ $tooltip-opacity:                       1;
 $tooltip-padding-y:                     .5625rem;
 $tooltip-padding-x:                     .9375rem;
 
-$tooltip-color-dark:                    $body-color-base;
+$tooltip-color-dark:                    $sub-color-base;
 $tooltip-bg-light:                      #f5f7f7;
 $tooltip-box-shadow:                    0 3px 6px 0 rgba($black, .14);
 
@@ -732,7 +740,7 @@ $list-group-item-padding-x:             1.875rem;
 $list-group-active-width:               4px;
 $list-group-active-bg:                  $component-active-bg;
 
-$list-group-disabled-color:             $body-color-base;
+$list-group-disabled-color:             $sub-color-base;
 
 // Breadcrumbs
 $breadcrumb-font-size:                  $font-size-base * .6875;
@@ -857,7 +865,7 @@ $testimonial-box-padding:               2.1875rem 2.5rem;
 $testimonial-name-font-size:            1.125rem;
 $testimonial-name-font-weight:          $font-weight-600;
 $testimonial-name-wording-font-weight:  $font-weight-400;
-$testimonial-name-wording-color:        $body-color-base;
+$testimonial-name-wording-color:        $sub-color-base;
 $testimonial-name-color:                #202020;
 $testimonial-quote-h:                   20px;
 $testimonial-quote-icon-mb:             1.875rem;
@@ -979,8 +987,7 @@ $info-box-4-caption-py:                 5rem;
   --button-border: rgba(236, 236, 236, 0.4);
 
   /* Fonts Colors */
-  // Primary Font
-  --primary-font-color: #545454;
+
   // Gray Font
   --gray-font-color: #dcdcdc;
   // Gray Default Font
