--- a/scss/partials/_lester_counters.scss
+++ b/scss/partials/_lester_counters.scss
@@ -25,7 +25,7 @@
         letter-spacing: 1px;
         line-height: 1;
         margin-bottom: 8px;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         opacity: 0.3;
         transition: all .2s ease-in-out;
         @media(max-width: $lg) {
@@ -43,7 +43,7 @@
         font-size: 13px;
         font-weight: 700;
         letter-spacing: 0.5px;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         color: var(--heading-color);
         text-transform: uppercase;
         transition: all .3s ease-in-out;
@@ -59,11 +59,11 @@
     }
     .counter-box:hover {
       .prop-obj {
-        color: var(--primary-color);
+        color: $theme-color;
         opacity: 1;
       }
       .title-counter{
-        color: var(--primary-color);
+        color: $theme-color;
         opacity: 1;
       }
     }
@@ -95,7 +95,7 @@
         font-size: 13px;
         font-weight: 700;
         letter-spacing: 0.5px;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         color: rgba($black, 0.3);
         margin-bottom: 15px;
         text-transform: uppercase;
@@ -112,7 +112,7 @@
       .prop-obj {
         font-size: 80px;
         font-weight: 700;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         color: rgba($black, 0.3);
         line-height: 1;
         transition: all .3s ease-in-out;
@@ -130,10 +130,10 @@
     }
     .counter-box:hover {
       .title-counter {
-        color: var(--primary-color);
+        color: $theme-color;
       }
       .prop-obj {
-        color: var(--primary-color);
+        color: $theme-color;
       }
     }
     .counter-box:not(:last-child):after {
@@ -191,9 +191,9 @@
           font-size: 40px;
           letter-spacing: 1px;
           font-weight: 600;
-          font-family: var(--secondary-font);
+          font-family: $font-secondary;
           width: 90px;
-          color: var(--primary-color);
+          color: $theme-color;
           @media(max-width: $xl) {
             font-size: 32px;
             width: 80px;
