--- a/scss/partials/_lester_hero.scss
+++ b/scss/partials/_lester_hero.scss
@@ -21,7 +21,7 @@
     position: relative;
     .content-default {
       .content-heading {
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         text-align: center;
         color: $white;
         text-shadow: 2px 2px 1px var(--text-shadow-medium);
@@ -40,12 +40,12 @@
           font-size: 28px;
         }
         .highlight {
-          color: var(--primary-color);
+          color: $theme-color;
         }
       }
       .subtitle {
         color: #ffffff;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         font-size: 18px;
         text-align: center;
         position: relative;
@@ -303,7 +303,7 @@
       button:hover {
         border-color: $white;
         span {
-          color: var(--primary-color);
+          color: $theme-color;
         }
       }
       .owl-next:hover:after {
@@ -396,7 +396,7 @@
           align-items: center;
           a {
             color: $white;
-            font-family: var(--secondary-font);
+            font-family: $font-secondary;
             letter-spacing: 1px;
             transition: all .3s ease-in-out;
             font-weight: 300;
@@ -469,7 +469,7 @@
       text-align: center;
       font-weight: 600;
       margin-bottom: 10px;
-      color: var(--primary-color);
+      color: $theme-color;
       @media(max-width: $lg) {
         font-size: 28px;
         margin-bottom: 5px;
@@ -515,7 +515,7 @@
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
         border: none;
-        background-color: var(--primary-color);
+        background-color: $theme-color;
         color: $white;
         cursor: pointer;
         @media(max-width: $md) {
@@ -532,7 +532,7 @@
       border-radius: 5px;
       transition: all .2s ease-in-out;
       font-weight: 500;
-      font-family: var(--secondary-font);
+      font-family: $font-secondary;
       i {
         margin-right: 15px;
         color: $white;
@@ -556,13 +556,12 @@
     height: 100vh;
     .content-wrapper {
       .title {
-        font-family: var(--primary-font);
         color: $white;
         font-weight: 500;
         margin-bottom: 15px;
         text-align: center;
         span {
-          color: var(--primary-color);
+          color: $theme-color;
         }
       }
       .subtitle {
@@ -615,7 +614,7 @@
           height: 50px;
           padding: 0 30px;
           border: 1px solid transparent;
-          background-color: var(--primary-color);
+          background-color: $theme-color;
           color: $white;
           i {
             margin-left: 15px;
