--- a/scss/partials/_lester_members_sliders.scss
+++ b/scss/partials/_lester_members_sliders.scss
@@ -127,7 +127,7 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background: linear-gradient(to top, rgba(33, 33, 33, 1), var(--primary-color));
+          background: linear-gradient(to top, rgba(33, 33, 33, 1), $theme-color);
           opacity: 0;
           transition: all .4s ease-in-out;
         }
