--- a/scss/partials/_lester_services_items.scss
+++ b/scss/partials/_lester_services_items.scss
@@ -26,7 +26,7 @@
   .service-wrapper:hover{
     i{
       opacity: 1;
-      color: var(--primary-color);
+      color: $theme-color;
     }
   }
 }
@@ -44,7 +44,7 @@
     min-width: 50px;
     max-height: 50px;
     border-radius: 100%;
-    background-color: var(--primary-color);
+    background-color: $theme-color;
     border: 4px solid var(--button-border);
     margin-right: 25px;
     @media(max-width: $xl) {
@@ -80,7 +80,7 @@
     letter-spacing: 0.5px;
     i {
       margin-right: 10px;
-      color: var(--primary-color);
+      color: $theme-color;
     }
   }
   p {
@@ -90,12 +90,12 @@
 
 .service-item-type-4 {
   .up-text {
-    color: var(--primary-color);
+    color: $theme-color;
     font-weight: 400;
     line-height: 1;
     opacity: 0.9;
     letter-spacing: 0.7px;
-    font-family: var(--secondary-font);
+    font-family: $font-secondary;
   }
   .title {
     margin-bottom: 10px;
