--- a/scss/partials/_lesterbuttons.scss
+++ b/scss/partials/_lesterbuttons.scss
@@ -45,7 +45,7 @@
   font-weight: 500;
   display: flex;
   line-height: 1;
-  font-family: var(--secondary-font);
+  font-family: $font-secondary;
   letter-spacing: 2px;
   text-transform: uppercase;
   padding: 17px 27px;
@@ -223,7 +223,7 @@
 .button-submit {
   font-weight: 600;
   line-height: 1;
-  font-family: var(--secondary-font);
+  font-family: $font-secondary;
   letter-spacing: 2px;
   text-transform: uppercase;
   padding: 18px 40px;
