--- a/scss/partials/_portfolio.scss
+++ b/scss/partials/_portfolio.scss
@@ -14,7 +14,7 @@
     .img-wrapper:after {
       content: ' ';
       display: block;
-      background-color: var(--primary-color);
+      background-color: $theme-color;
       opacity: 0;
       position: absolute;
       transform: scale(0.9);
@@ -59,7 +59,7 @@
       }
       .category {
         color: $white;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         font-weight: 300;
         transition: all .5s ease-in-out;
         opacity: 0;
@@ -180,7 +180,7 @@
             }
             p {
               line-height: 1;
-              font-family: var(--secondary-font);
+              font-family: $font-secondary;
               text-transform: uppercase;
               font-size: 12px;
               color: var(--black_default);
@@ -199,7 +199,7 @@
         height: 100%;
         top: 0;
         left: 0;
-        background: linear-gradient(to bottom, $white, var(--primary-color));
+        background: linear-gradient(to bottom, $white, $theme-color);
         opacity: 0;
         z-index: 1;
         transition: all .5s ease-in-out;
@@ -272,7 +272,7 @@
         }
         p {
           line-height: 1;
-          font-family: var(--secondary-font);
+          font-family: $font-secondary;
           text-transform: uppercase;
           color: var(--black_default);
           @media(max-width: $lg) {
@@ -334,7 +334,7 @@
         }
         li {
           .title {
-            font-family: var(--secondary-font);
+            font-family: $font-secondary;
             margin-bottom: 5px;
             font-weight: 500;
             line-height: 1;
@@ -346,7 +346,7 @@
           }
           .info-text {
             color: var(--black_default);
-            font-family: var(--secondary-font);
+            font-family: $font-secondary;
             font-weight: 500;
           }
           a {
@@ -354,7 +354,7 @@
             color: var(--black_default);
           }
           a:hover {
-            color: var(--primary-color);
+            color: $theme-color;
           }
         }
         li:not(:last-child) {
@@ -409,7 +409,7 @@
           margin-bottom: 15px;
         }
         .step-num {
-          color: var(--primary-color);
+          color: $theme-color;
           font-weight: 600;
           line-height: 1;
           font-size: 60px;
@@ -449,7 +449,7 @@
         font-weight: 600;
         text-transform: uppercase;
         font-size: 12px;
-        font-family: var(--secondary-font);
+        font-family: $font-secondary;
         line-height: 1;
         display: flex;
         align-items: center;
@@ -474,7 +474,7 @@
         }
       }
       a:hover {
-        color: var(--primary-color);
+        color: $theme-color;
         opacity: 1;
       }
     }
