--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -12,9 +12,9 @@ $heading-color-base:    #202020;
 // Fonts
 //
 // Font, line-height, and color for body text, headings, and more.
-$font-family-base: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', 'Segoe UI', sans-serif;
-$font-secondary: "Muli", 'Verdana', 'Avenir', 'Tahoma', 'Segoe UI', sans-serif;
-$font-zh: "Muli", 'verdana', 'Avenir', "Noto Serif TC", 宋体, SimSun, 华文细黑, STXihei, sans-serif;
+$font-family-base: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
+$font-secondary: "Muli", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
+$font-zh: "Muli", 'Verdana', 'Avenir', "Noto Serif TC", 宋体, SimSun, sans-serif;
 
 $font-size-base:    1rem;
 $font-size-lg:      ($font-size-base * 1.125);
