--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -93,7 +93,7 @@ $blockquote-footer-margin:              .625rem;
 $mark-bg:                               #f4f6f7;
 
 
-/* Lester scss variables */
+// Homenet breakpoint variables
 /* Points */
 $xs: 0px;
 $sm: 575px;
@@ -101,6 +101,17 @@ $md: 767px;
 $lg: 991px;
 $xl: 1199px;
 
+// Homenet Avatar Color Picker
+$taro:                  #a77ca8;
+$strawberry:            #d5637e;
+$pandan:                #5e9259;
+$blueberry:             #676799;
+$custard:               #e4a153;
+$blackcurrent:          #678d99;
+$sweetpotato:           #99679e;
+$chocolate:             #937a5c;
+$greentea:              #6a9e71;
+$raspberry:             #c37892;
 
 // Color settings
 
