--- a/scss/homenet.scss
+++ b/scss/homenet.scss
@@ -51,6 +51,7 @@
 @import "homenet/homenet-lists";
 @import "homenet/homenet-flip-cards";
 @import "homenet/homenet-bubble-quote";
+@import "homenet/homenet-avatar-dropdown";
 
 // Homenet Elements
 @import "homenet/homenet-buttons";
