--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -105,9 +105,9 @@ $xl: 1199px;
 $taro:                  #a77ca8;
 $strawberry:            #d5637e;
 $pandan:                #5e9259;
-$blueberry:             #676799;
+$grape:                 #676799;
 $custard:               #e4a153;
-$blackcurrent:          #678d99;
+$blueberry:             #678d99;
 $sweetpotato:           #99679e;
 $chocolate:             #937a5c;
 $greentea:              #6a9e71;
