--- a/scss/homenet/_homenet-avatar-dropdown.scss
+++ b/scss/homenet/_homenet-avatar-dropdown.scss
@@ -22,14 +22,14 @@ background-color: $strawberry;
 .dropdown-item.pandan::before {
 background-color: $pandan;
 }
-.dropdown-item.blueberry::before {
-background-color: $blueberry;
+.dropdown-item.grape::before {
+background-color: $grape;
 }
 .dropdown-item.custard::before {
 background-color: $custard;
 }
-.dropdown-item.blackcurrent::before {
-background-color: $blackcurrent;
+.dropdown-item.blueberry::before {
+background-color: $blueberry;
 }
 .dropdown-item.sweetpotato::before {
 background-color: $sweetpotato;
